2014-08-17  Thomas Adam <thomas@fvwm.org>
	* commands/ButtonState.xml:
	Fix rendering glitch due to typos in syntax.

2014-08-13  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* commands/Resize.xml:
	Document new resize suffixes 'wa' and 'da'.

	* fvwm/expansion.xml:
	document new variables $[wa.x/y/width/height] and
	$[dwa.x/y/width/height]

2014-07-10  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* commands/Style.xml:
	Replace NoPPosition with !UsePPosition and NoUsPosition with
	!UseUSPosition.

2014-07-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/icccm.xml:
	Use "WarpToWindow !raise" in WindowListFunc.

	* commands/WarpToWindow.xml:
	Document "!raise" and "raise" options to the WarpToWindow command.

2013-04-13  Dan Espen  <despen@verizon.net>

	* commands/Test.xml: Document that infostore works with EnvMatch.

2013-01-20  Dan Espen  <despen@verizon.net>

	* commands/BugOpts.xml:
	* doc/fvwm/images.xml:
	* doc/fvwm/xinerama.xml: spelling-error-manpage patch
	from Vincent W. Chen Lintain Debian.


2012-06-22  Dan Espen  <despen@verizon.net>

	* commands/Style.xml: Cleanup iconsize.

2011-09-27  Thomas Adam <thomas@fvwm.org>
	* commands/Style.xml:
	Add tiny note about IconTitleFormat.

2011-09-26  Chris Siebenmann <cks-fvwm@cs.toronto.edu>
	* commands/Style.xml:
	Document '%i' option for IconTitleFormat (and TitleFormat)

2011-08-28  Thomas Adam <thomas@fvwm.org>
	* fvwm/expansion.xml:
	Explain $[pointer.screen]

2011-08-28  Thomas Adam <thomas@fvwm.org>
	* doc/commands/Move.xml:
	Explain ewmhiwa option to Move command.

2011-08-15  Thomas Adam  <thomas@fvwm.org>
	* doc/commands/Resize.xml:
	Add information regarding the "automatic" option to the
	Resize command.

2011-04-10  Thomas Adam  <thomas@fvwm.org>
	* fvwm/bugs.xml:
	Remove any reference to the old Jitterbug (FVWM bug tracker).

2010-09-14  Thomas Adam  <thomas@xteddy.org>
	* commands/Move.xml:
	Document that Alt during Move will disable SnapAttraction
