@@ -1,4 +1,9 @@
 2014-08-17  Thomas Adam <thomas@fvwm.org>
+	* commands/ButtonState,xml:
+	Clarify that the "bool" option can be specified in more ways than just
+	using "True" and "False", as ParseToggleArgument() is called.
+
+2014-08-17  Thomas Adam <thomas@fvwm.org>
 	* commands/ButtonState.xml:
 	Fix rendering glitch due to typos in syntax.
 
